syntax = "proto3";
package blob;

import "gogoproto/gogo.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/blob/types";

// EventPayForBlob defines an event that is emitted after a pay for blob has
// been processed.
message EventPayForBlob {
  string signer = 1;
  uint32 blob_size = 2;
  bytes namespace_id = 3;
}
